syntax = "proto2";

option java_package = "com.example.protos";

import "base.proto";

enum Gender {
  MALE = 1;
  FEMALE = 2;
}

message Address {
  optional string street = 1;
  optional string city = 2;
}

message SimplePerson {
  optional string name = 1;
  optional int32 age = 2;
  repeated string tags = 3;
  optional Address address = 4;
  repeated int32 nums = 5;
}

message Person {
  optional string name = 1;
  optional int32 age = 2;
  optional Gender gender = 3;
  repeated string tags = 4;
  repeated Address addresses = 5;
  optional Base base = 6;

  message Inner {
    enum InnerEnum {
      V0 = 0;
      V1 = 1;
    }

    optional InnerEnum inner_value = 1;
  }
  optional Inner inner = 7;
  optional bytes data = 8;
}
